update spacing, update dates. fix first-letter position, update footer font

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 ﻿/* 
    Filename: styles.css
+
    Author:   Arjun Pramanik
-   Date:     Feb 17 2025  
+   Date:     Feb 18 2025  
 */
 
 /* reset styles */
@@ -56,8 +57,8 @@ article p:first-line {
    font-weight: bold;
 }
 article p:first-letter {
-   font-size: 2em;
-   float: left;
+   font-size: 1.4em;
+   float: top;
    line-height: 0.9em;
 }
 .title{
@@ -70,6 +71,7 @@ footer {
    color: #E0E2E4;
    background-color: rgb(25, 43, 119);
    text-align: center;
+   font-family: "JetBrains Mono", "Times New Roman", Times, serif;
 }
 footer p {
    margin: 0.4em;
@@ -77,7 +79,6 @@ footer p {
 .accent {
    font-weight: bold;
 }
-
 
 /* print styles */
 @media print {
